[package]
name = "vimeo-download"
version = "0.1.0"
authors = ["Mike Zeller <mike@mikezeller.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"
url = "2.1.1"
anyhow = "1.0.34"
base64 = "0.13.0"
tempfile = "3.1.0"
mime = "0.3.16"

[dependencies.reqwest]
version = "0.10.8"
features = ["blocking", "json"]


[dependencies.serde]
version = "1.0.117"
features = ["derive"]
